--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#0F3424",
-        "titleBar.activeBackground": "#144833",
-        "titleBar.activeForeground": "#F3FCF8"
+        "activityBar.background": "#163045",
+        "titleBar.activeBackground": "#1F4361",
+        "titleBar.activeForeground": "#FAFCFE"
     }
 }
