--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ node_modules/
 npm-debug.log
 yarn-error.log
 
+
+.env.encrypted
+
+.vscode/settings.json
+
 # Laravel 4 specific
 bootstrap/compiled.php
 app/storage/
